--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --vermilion: #FF462D;
+  --deep_teal: #072F25;
+  --welcome_yellow: #FF9924;
+
 }
 
 @theme inline {
@@ -10,6 +14,9 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-vermilion: var(--vermilion);
+  --color-deep_teal: var(--deep_teal);
+  --color-welcome_yellow: var(--welcome_yellow);
 }
 
 @media (prefers-color-scheme: dark) {
