--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --vermilion: #FF462D;
-  --deep_teal: #072F25;
-  --welcome_yellow: #FF9924;
-
+  --vermilion: #ff462d;
+  --dark_vermilion: #eb1700;
+  --deep_teal: #072f25;
+  --welcome_yellow: #ff9924;
 }
 
 @theme inline {
@@ -17,6 +17,7 @@
   --color-vermilion: var(--vermilion);
   --color-deep_teal: var(--deep_teal);
   --color-welcome_yellow: var(--welcome_yellow);
+  --color-dark_vermilion: var(--dark_vermilion);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,4 +31,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.text-outline {
+  color: transparent;
+  -webkit-text-stroke: 1px #0a0a0a;
 }
