--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,17 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  cursor: none;
+
 }
+
+/* button {
+ cursor: url("/cursor.png") 32 32, pointer;
+}
+
+a {
+  cursor: url("/cursor.png") 32 32, pointer;
+} */
 
 .text-outline {
   color: transparent;
